# CardEngine

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
gui/: CardView.cpp  CardView.h  DealPresenter.cpp  DealPresenter.h  DealView.cpp  DealView.h  HandView.cpp  HandView.h  MainWindow.cpp  MainWindow.h  SetDealDialog.cpp  SetDealDialog.h  SetDealDialog.ui
models/: Card.cpp  Card.h  Deal.cpp  Deal.h  DealImpl.cpp  DealImpl.h  State.cpp  State.h
models/preferans/: PreferansDeal.cpp
models/thousand/: ThousandDeal.cpp  ThousandDeal.h  ThousandState.cpp  ThousandState.h
solvers/: Solver.h  ThousandSolver.cpp  ThousandSolver.h
src/gui/: CardView.cpp  DealPresenter.cpp  HandView.h  MainWindow.h  SetDealDialog.h  SetDealDialog.ui
src/models/: Deal.cpp  Deal.h  DealImpl.cpp  DealImpl.h  State.cpp  State.h
src/models/preferans/: PreferansDeal.h  PreferansState.cpp  PreferansState.h
src/models/thousand/: ThousandDeal.cpp  ThousandDeal.h  ThousandState.h
src/solvers/: AlphaBetaSolver.cpp  AlphaBetaSolver.h  Solver.cpp
